deviceApiService/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-svc-deployment
spec:
  replicas: 1  # Adjust as needed
  selector:
    matchLabels:
      app: api-svc
  template:
    metadata:
      labels:
        app: api-svc
    spec:
      containers:
      - name: api-svc-container
        image: registry:5000/api-svc:v1
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
